--- a/7 Ejercicio CSS selectores/style.css
+++ b/7 Ejercicio CSS selectores/style.css
@@ -4,4 +4,23 @@ ol {
   list-style-position: inside;
 }
 
+li[value="4"]{
+  color:blue;
+}
+
+p {
+  color: red;
+}
+
+.note {
+  font-size: 20px;
+}
+
+#id-selector-demo {
+  color:green;
+}
+
+*{
+  text-align: center;
+}
 /* Write your CSS below, don't change the rules above. */
