--- a/8ejerciciocascade/style.css
+++ b/8ejerciciocascade/style.css
@@ -10,3 +10,17 @@ p {
   margin: 0;
   padding: 0;
 }
+
+#outer-box {
+  border: 10px solid purple;
+  padding: 10px;
+}
+
+.inner-box{
+  background-color: red;
+}
+
+.white-text{
+  color:white;
+
+}
